# aihive

./: .env.example  .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.cursor/rules/: developerguidelines.mdc
config/: prompts.yaml
docs/: workflow_integration.md
docs/arch/: README.md  architecture_overview.md  component_architecture.md  data_flow_architecture.md  high_level_architecture.md  implementation_plan.md  security_architecture.md  technology_stack.md
docs/arch/adr/: 003-agent-implementation.md  004-ai-agent-implementation.md  005-product-requirements-storage.md  006-asynchronous-workflow-integration.md  007-configurable-message-broker.md
docs/arch/diagrams/: README.md
docs/product/: concept.md  high_level_user_stories.md
docs/roadmap/: README.md  phase1_implementation.md  phase1_technical_spec.md  phase2_implementation.md
src/: app.py  config.py  dependencies.py  main.py  workflow_integration.py
src/core/: config.py  exceptions.py  prompt_manager.py
src/core/agent/: agent_tool_interface.py  ai_agent.py  orchestrator_agent.py  tool_registry.py
src/core/common/: message_broker.py
src/core/domain_events/: base_event.py  requirement_events.py  task_events.py
src/core/message_broker/: factory.py  message_broker_interface.py
src/human_interaction/api/: task_api.py
src/infrastructure/message_queue/: domain_events.py  error_handler.py  event_monitor.py  (+2 more)
tests/: conftest.py  test_workflow_integration.py
tests/integration/: test_task_management.py
venv311/: pyvenv.cfg
(+53 files in other folders)
