[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "strict"
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*:",
    "ignore::DeprecationWarning:pkg_resources.*:",
]

[tool.pytest-asyncio]
default_fixture_loop_scope = "function"
strict = true 